fix primary button text contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
     --background: 0 0% 0%;
     --foreground: 0 0% 100%;
     --primary: 161.4 93.5% 30.4%;
-    --primary-foreground: 0 0% 100%;
+    --primary-foreground: 0 0% 0%;
     --secondary: 151.8 81% 95.9%;
     --secondary-foreground: 0 0% 0%;
     --border: 0 0% 20%;
